# Learn

Linux基本操作/: Linux基本操作.md  Python基础编程.md  run包的使用.md  sh脚本.md
Linux应用编程/: FUSE.md
Linux应用编程/minshell/: Makefile  def.h  externs.h  init.c  init.h  main.c  minshell  parse.c  parse.h
Linux应用编程/test/app1/: main.c
Linux应用编程/test/app2/: main.c
Linux系统移植/: 内核编译.txt
Linux系统编程/: SystemV函数详解.md  内存映射函数详解.md  文件操作.md  目录操作.md  进程管理.md
my_app/: CMakeLists.txt
my_app/include/: main.h
my_app/src/: main.c
开发工具/CMakelist/: cmakelist.md
开发工具/Makefile/: makefile.md
开发工具/VScode/: 功能设置.txt
开发工具/gcc/: gcc.md
开发工具/gdb/: gdb.md
测试工具/函数测试/: gtest.md
测试工具/功能测试/: pytest.md
英语/: 语法总框架.md
